--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
         <div class="container-fluid m-0 p-0">
             <div class="container-fluid min-vh-100 first-row">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-sm-9">
-                        <nav class="navbar navbar-expand-lg pt-3 sticky-top">
+                    <div class="col-12 col-sm-9 position-fixed">
+                        <nav class="navbar navbar-expand-lg pt-3">
                             <div class="container-fluid">
-                                <div class="">
+                                <div
+                                    class="col-12 col-sm-4 row justify-content-between"
+                                >
                                     <img
                                         src="images/logo/logo-white.png"
                                         alt=""
-                                        class="img-fluid"
+                                        class="img-fluid col-6 col-sm-6"
                                     />
                                     <button
-                                        class="navbar-toggler"
+                                        class="navbar-toggler bg-white col-2"
                                         type="button"
                                         data-bs-toggle="collapse"
                                         data-bs-target="#navbarSupportedContent"
@@ -36,7 +38,7 @@
                                         aria-label="Toggle navigation"
                                     >
                                         <span
-                                            class="navbar-toggler-icon navbar-dark"
+                                            class="navbar-toggler-icon"
                                         ></span>
                                     </button>
                                 </div>
@@ -108,14 +110,16 @@
                         </nav>
                         <hr />
                     </div>
-                    <div class="text-end">
+                    <div
+                        class="text-end col-sm-12 justify-content-end mt-5 pt-5"
+                    >
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
                             fill="none"
                             viewBox="0 0 24 24"
                             stroke-width="1.5"
                             stroke="currentColor"
-                            class="w-6 h-6 icon-width"
+                            class="w-6 h-6 icon-width col-sm-6"
                         >
                             <path
                                 stroke-linecap="round"
@@ -140,39 +144,185 @@
                             />
                         </svg>
                     </div>
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-sm-9">
-                            <div class="row">
-                                <div class="col-12 col-sm-6"></div>
-                                <div
-                                    class="col-12 col-sm-6 border border-danger bg-danger p-4 mt-5"
-                                >
-                                    <div>
-                                        <div class="p-5 border border-5">
-                                            <h1 class="fw-bold text-white">
-                                                DELICIOUS BREAKFAST
-                                            </h1>
-                                            <p class="text-white">
-                                                Lorem ipsum dolor sit, amet
-                                                consectetur adipisicing elit.
-                                                Officiis placeat accusamus nihil
-                                                magni, sequi, et atque a ex
-                                                eaque minima voluptate sit
-                                                voluptatem eius distinctio alias
-                                                reprehenderit sint doloribus
-                                                molestias!
-                                            </p>
-                                            <button
-                                                class="btn btn-outline-light fw-bold border-2"
-                                            >
-                                                DISCOVER MENU
-                                            </button>
+                </div>
+
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="0"
+                            class="active icon_round"
+                            aria-current="true"
+                            aria-label="Slide 1"
+                        ></button>
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="1"
+                            class="icon_round"
+                            aria-label="Slide 2"
+                        ></button>
+                        <button
+                            type="button"
+                            data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="2"
+                            class="icon_round"
+                            aria-label="Slide 3"
+                        ></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row justify-content-center py-5">
+                                <div class="col-12 col-sm-9">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-6"></div>
+                                        <div
+                                            class="col-12 col-sm-6 border border-danger bg-danger p-4 mt-5"
+                                        >
+                                            <div>
+                                                <div
+                                                    class="p-5 border border-5"
+                                                >
+                                                    <h1
+                                                        class="fw-bold text-white"
+                                                    >
+                                                        DELICIOUS BREAKFAST
+                                                    </h1>
+                                                    <p class="text-white">
+                                                        Lorem ipsum dolor sit,
+                                                        amet consectetur
+                                                        adipisicing elit.
+                                                        Officiis placeat
+                                                        accusamus nihil magni,
+                                                        sequi, et atque a ex
+                                                        eaque minima voluptate
+                                                        sit voluptatem eius
+                                                        distinctio alias
+                                                        reprehenderit sint
+                                                        doloribus molestias!
+                                                    </p>
+                                                    <button
+                                                        class="btn btn-outline-light fw-bold border-2"
+                                                    >
+                                                        DISCOVER MENU
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row justify-content-center py-5">
+                                <div class="col-12 col-sm-9">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-6"></div>
+                                        <div
+                                            class="col-12 col-sm-6 border border-danger bg-danger p-4 mt-5"
+                                        >
+                                            <div>
+                                                <div
+                                                    class="p-5 border border-5"
+                                                >
+                                                    <h1
+                                                        class="fw-bold text-white"
+                                                    >
+                                                        DELICIOUS BREAKFAST
+                                                    </h1>
+                                                    <p class="text-white">
+                                                        Lorem ipsum dolor sit,
+                                                        amet consectetur
+                                                        adipisicing elit.
+                                                        Officiis placeat
+                                                        accusamus nihil magni,
+                                                        sequi, et atque a ex
+                                                        eaque minima voluptate
+                                                        sit voluptatem eius
+                                                        distinctio alias
+                                                        reprehenderit sint
+                                                        doloribus molestias!
+                                                    </p>
+                                                    <button
+                                                        class="btn btn-outline-light fw-bold border-2"
+                                                    >
+                                                        DISCOVER MENU
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row justify-content-center py-5">
+                                <div class="col-12 col-sm-9">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-6"></div>
+                                        <div
+                                            class="col-12 col-sm-6 border border-danger bg-danger p-4 mt-5"
+                                        >
+                                            <div>
+                                                <div
+                                                    class="p-5 border border-5"
+                                                >
+                                                    <h1
+                                                        class="fw-bold text-white"
+                                                    >
+                                                        DELICIOUS BREAKFAST
+                                                    </h1>
+                                                    <p class="text-white">
+                                                        Lorem ipsum dolor sit,
+                                                        amet consectetur
+                                                        adipisicing elit.
+                                                        Officiis placeat
+                                                        accusamus nihil magni,
+                                                        sequi, et atque a ex
+                                                        eaque minima voluptate
+                                                        sit voluptatem eius
+                                                        distinctio alias
+                                                        reprehenderit sint
+                                                        doloribus molestias!
+                                                    </p>
+                                                    <button
+                                                        class="btn btn-outline-light fw-bold border-2"
+                                                    >
+                                                        DISCOVER MENU
+                                                    </button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <button
+                        class="carousel-control-prev"
+                        type="button"
+                        data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev"
+                    >
+                        <span
+                            class="carousel-control-prev-icon"
+                            aria-hidden="true"
+                        ></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button
+                        class="carousel-control-next"
+                        type="button"
+                        data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next"
+                    >
+                        <span
+                            class="carousel-control-next-icon"
+                            aria-hidden="true"
+                        ></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
             <!-- Second page -->
@@ -1056,6 +1206,8 @@
                 </div>
             </div>
         </div>
+        <!-- Bootstrap Js -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
         <!-- Custom script -->
         <script src="js/script.js"></script>
